--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+* {
+    padding: 0;
+    margin: 0;
+}
+h1,h2,h3,h4 {
+    font-family: 'Noto Sans KR', sans-serif;
+}
+p {
+    font-family: 'Noto Sans KR', sans-serif;
+}
+span {
+    font-family: 'Noto Sans KR', sans-serif;
+}
