--- a/src/app/common/menu/menu.component.html
+++ b/src/app/common/menu/menu.component.html
@@ -3,7 +3,7 @@
         <ul>
             <li> <a class="active" (click)="callCamera()"><i class="fa fa-camera"></i></a> </li>
             <li> <a><i class="fa fa-user"></i></a> </li>
-            <li> <a><i class="fa fa-tag"></i></a> </li>
+            <li> <a (click)="callProductCatalog()"><i class="fa fa-tag"></i></a> </li>
         </ul>
     </nav>
 </div>
