--- a/src/app/components/product-catalog/product-catalog.component.scss
+++ b/src/app/components/product-catalog/product-catalog.component.scss
@@ -8,6 +8,7 @@
 .cont{
     width: 46%;
     padding: 10px 15px;
+    height: 300px;
 
 }
 
@@ -28,11 +29,11 @@
 .n-product{
     font-weight: 900;
     color: gray;
-    font-size: 30px;
+    font-size: 15px;
 }
 
 .p-product{
     font-weight: 900;
     color: black;
-    font-size: 30px;
+    font-size: 15px;
 }
