--- a/src/app/components/product-catalog/product-catalog.component.html
+++ b/src/app/components/product-catalog/product-catalog.component.html
@@ -7,7 +7,7 @@
       </div>
       <div class="texto-product">
           <p class="n-product">{{product.description}}</p>
-          <p class="p-product">${{product.price | currency}}</p>
+          <p class="p-product">{{product.price | currency}}</p>
       </div>
   </div>
 
