--- a/src/app/components/home/camera/camera.component.scss
+++ b/src/app/components/home/camera/camera.component.scss
@@ -6,6 +6,8 @@
 }
 .contenedor{
     width: 100%;
+    height: 400px;
+    border-radius: 10px;
     border: 1px solid;
     position: relative;
     i{
