--- a/src/app/components/home/camera/camera.component.scss
+++ b/src/app/components/home/camera/camera.component.scss
@@ -3,6 +3,23 @@
 }
 .card{
     width: 100%;
+    margin: 2rem 0;
+    padding: 10px;
+    .image{
+        width: 100%;
+        height: 150px;
+        img{
+            width: 100%;
+            display: block;
+            margin: auto;
+        }
+    }
+    .content{
+        p{
+            text-align: center;
+            margin: 0;
+        }
+    }
 }
 .contenedor{
     width: 100%;
@@ -10,6 +27,7 @@
     border-radius: 10px;
     border: 1px solid;
     position: relative;
+    margin-top: 3rem;
     i{
         position: absolute;
         top: 50%;
