--- a/src/app/components/home/camera/camera.component.html
+++ b/src/app/components/home/camera/camera.component.html
@@ -1,24 +1,26 @@
 <form (ngSubmit)="onFileSelected(formCamera.value)" [formGroup]="formCamera">
-    <input id="event" type="file" name="image" (change)="onFileChange($event)" >
+    <input id="event" type="file" name="image" (change)="onFileChange($event)">
 </form>
-<div class="container">
-    <div class="row" [hidden]="hidden">
+<div class="container-fluid">
+    <div class="row"  [hidden]="hidden">
         <div class="col-12">
             <div class="contenedor">
                 <i class="fa fa-camera"></i>
             </div>
         </div>
     </div>
-    <div class="row" *ngFor="let item of products">
-        <div class="col-12">
-            <mat-card class="card">
-                <img mat-card-image [src]="item.imageUrl" alt="Producto">
-                <mat-card-content>
-                    <p>{{item.description}}</p>
-                    <p>${{item.price}}</p>
-                    <p>Color: {{item.color}}</p>
-                </mat-card-content>
-            </mat-card>
+    <div class="scroller">
+        <div class="row" *ngFor="let item of products">
+            <div class="col-12">
+                <mat-card class="card">
+                    <img mat-card-image [src]="item.imageUrl" alt="Producto">
+                    <mat-card-content>
+                        <p class="description">{{item.description}}</p>
+                        <p class="price">${{item.price}}</p>
+                        <p class="color">Color: {{item.color}}</p>
+                    </mat-card-content>
+                </mat-card>
+            </div>
         </div>
     </div>
 </div>
