--- a/src/app/components/product-catalog/product-catalog.component.scss
+++ b/src/app/components/product-catalog/product-catalog.component.scss
@@ -37,3 +37,10 @@
     color: black;
     font-size: 15px;
 }
+
+div.titulo {
+    font-weight: 900;
+    text-align: center;
+    padding: 10px;
+    text-transform: uppercase;
+}
