--- a/src/app/components/home/camera/camera.component.html
+++ b/src/app/components/home/camera/camera.component.html
@@ -18,6 +18,10 @@
                         <p class="description">{{item.description}}</p>
                         <p class="price">${{item.price}}</p>
                         <p class="color">Color: {{item.color}}</p>
+                        <div class="buttons">
+                            <button>Comprar</button>
+                            <button>Solicitar credito</button>
+                        </div>
                     </mat-card-content>
                 </mat-card>
             </div>
