--- a/src/app/components/home/camera/camera.component.scss
+++ b/src/app/components/home/camera/camera.component.scss
@@ -47,3 +47,15 @@ div.scroller {
         font-size: 3rem;
     }
 }
+
+button {
+    display: block;
+    background-color: #e1251b;
+    text-align: center;
+    border: none;
+    border-radius: 0;
+    color: white;
+    padding: 5px 10px;
+    margin-bottom: 0 auto 5px auto;
+    width: 200px;
+}
