--- a/src/app/components/home/camera/camera.component.scss
+++ b/src/app/components/home/camera/camera.component.scss
@@ -8,7 +8,7 @@ div.container-fluid div.row {
 }
 
 div.scroller {
-    height: 711px;
+    height: 568px;
     overflow: scroll;
 }
 
@@ -56,6 +56,6 @@ button {
     border-radius: 0;
     color: white;
     padding: 5px 10px;
-    margin-bottom: 0 auto 5px auto;
+    margin: 0 auto 5px auto;
     width: 200px;
 }
