--- a/src/app/components/home/camera/camera.component.html
+++ b/src/app/components/home/camera/camera.component.html
@@ -9,8 +9,12 @@
             </div>
         </div>
     </div>
+    <div class="row" *ngIf="!products">
+        <p>{{msj}}</p>
+    </div>
     <div class="row">
         <div class="col-6" *ngFor="let item of products">
+            <p>Productos relacionados</p>
             <div class="card">
                 <div class="image">
                     <img [src]="item.imageUrl" alt="products">
