--- a/src/app/components/home/camera/camera.component.scss
+++ b/src/app/components/home/camera/camera.component.scss
@@ -55,7 +55,7 @@ div.scroller {
     }
 }
 
-button.credit {
+button.buy {
     display: block;
     background-color: #e1251b;
     text-align: center;
