--- a/src/app/components/financiamiento/financiamiento.component.html
+++ b/src/app/components/financiamiento/financiamiento.component.html
@@ -1,7 +1,16 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <h1>Credito Elektra</h1>
+            <h1 class="title">Credito Elektra</h1>
+            <div class="cont" *ngFor="let product of products">
+                <div class="img-product"> 
+                    <img src="{{product.imageUrl}}" alt="">
+                </div>
+                <div class="texto-product">
+                    <p class="n-product">{{product.description}}</p>
+                    <p class="p-product">{{product.price | currency}}</p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
