--- a/src/app/components/financiamiento/financiamiento.component.scss
+++ b/src/app/components/financiamiento/financiamiento.component.scss
@@ -1,6 +1,46 @@
 .title{
-    font-size: 1rem;
+    font-size: 1.125rem;
     font-weight: 700;
     text-align: center;
     margin: 1rem 0;
+}
+.cont{
+    width: 46%;
+    padding: 10px 15px;
+    height: 300px;
+
+}
+
+.img-product{
+    width: 100%;
+    height: 150px;
+}
+
+.img-product img{
+    width: 100%;
+}
+
+.texto-product{
+    width: 100%;
+    text-align: center;
+    
+}
+
+.n-product{
+    font-weight: 900;
+    color: gray;
+    font-size: 15px;
+}
+
+.p-product{
+    font-weight: 900;
+    color: black;
+    font-size: 15px;
+}
+
+div.titulo {
+    font-weight: 900;
+    text-align: center;
+    padding: 10px;
+    text-transform: uppercase;
 }
